# macos-compatibility-table

./: CMakeLists.txt  README.md
src/: macos_compatibility.cpp
